[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qtm-mcp"
version = "0.1.0"
description = "AI-powered Model Context Protocol (MCP) server for Qualisys Track Manager (QTM)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Arjun Singh Shishodia", email = "arjunsinghshishodia03@gmail.com" }
]
maintainers = [
    { name = "Arjun Singh Shishodia", email = "arjunsinghshishodia03@gmail.com" }
]
urls = { Homepage = "https://github.com/Arjun-Zan-D/qtm-mcp", Repository = "https://github.com/Arjun-Zan-D/qtm-mcp", Issues = "https://github.com/Arjun-Zan-D/qtm-mcp/issues" }
keywords = [
    "mcp",
    "model-context-protocol",
    "qualisys",
    "motion-capture",
    "biomechanics",
    "gait-analysis",
    "opensim",
    "ai",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.27,<2",
    "httpx>=0.28,<1",
    "pydantic-settings>=2.1.0",
    "qtm-rt>=3.0.2,<4",
    "c3d>=0.5.2",
]

[project.optional-dependencies]
vision       = ["opencv-python>=4.9.0", "numpy>=1.24.0"]
clinical     = ["fhir.resources>=7.0.0", "reportlab>=4.0.0"]
biomechanics = ["scipy>=1.10.0"]
analytics    = ["pandas>=2.0.0", "scikit-learn>=1.2.0"]
all          = ["qtm-mcp[vision,clinical,biomechanics,analytics]"]
dev          = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-mock>=3.14", "ruff", "pyright", "bandit", "pip-audit"]

[project.scripts]
qtm-mcp = "qtm_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qtm_mcp"]

[tool.hatch.build.targets.sdist]
packages = ["src/qtm_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
